# consulta

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: blank.yml  fly-deploy.yml
consulta/: asgi.py  settings.py  urls.py  wsgi.py
consulta/atendimento/: forms.py  models.py  urls.py  views.py
consulta/atendimento/migrations/: 0001_initial.py
consulta/atendimento/templates/atendimento/: agendar_consulta.html  lista_consultas.html
consulta/atendimento/templates/consultas/: agendar_consulta.html  lista_consultas.html
consulta/atendimento/tests/: test_atendimento.py
consulta/base/: admin.py  urls.py
consulta/base/migrations/: 0001_initial.py
consulta/base/templates/base/: home.html
consulta/base/tests/: test_home.py
contrib/: .env-sample
staticfiles/css/: style.css
