[tool.poetry]
name = "davidson"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
